mfe-system-applications-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mfe-system-applications-service
  labels:
    app: mfe-system-applications-service
spec:
  selector:
    app: mfe-system-applications-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
